tests/valid/LogicalNot_Valid_1.whiley
public export method test():
    assume !true ==> true