tests/invalid/VarDecl_Invalid_1.whiley
public export method test() -> int:
    int x = y
    return x
